<package>
  <name>multi_robot_workstation</name>
  <version>0.0.1</version>
  <description>
  This package provides multi_robot_workstation function.
  </description>
  <maintainer email="jackwong3627@gmail.com">Jack Wong</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>vision_opencv</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>multi_robot_slam</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>vision_opencv</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>multi_robot_slam</run_depend>
  
</package>